# particlebot

./: .gitignore  README.md  branch.sh  config.hpp.in  main.cpp  meson.build  particlebot.hpp  pb-eval.lua  pb-titler.lua
chanop/: main.cpp
core/: admin.cpp  debug.cpp  help.cpp  main.cpp
fun/: main.cpp
lib/: Bot.cpp  CPPPlugin.cpp  CommandInfo.cpp  Event.cpp  EventMachine.cpp  IRCSocket.cpp  LuaPlugin.cpp  Plugin.cpp  PluginManager.cpp  User.cpp  exitcodes.hpp  include.hpp
particlebot/: Bot.hpp  CPPPlugin.hpp  CommandInfo.hpp  Event.hpp  EventMachine.hpp  IRCSocket.hpp  LuaPlugin.hpp  Plugin.hpp  PluginManager.hpp  User.hpp  include.hpp
pch/: libs.hpp
